# sales-analytics-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/sales_analysis/: __init__.py  app.py  cli.py  pipeline.py
tests/: test_cli.py  test_data_quality.py  test_pipeline.py
